# django-smart-models

./: LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: pypi-publish.yml
smart_models/: admin.py  apps.py  fields.py  models.py
smart_models/api_configurations/: configs.json  openai.json  stabilityai.json
smart_models/apis/: __init__.py  _configs.py  audio.py  image.py  text.py
smart_models/management/commands/: init_smart_models.py
