[metadata]
name = django-smart-models
version = 0.1
description = Django smart models & fields with AI built-in
long_description = file: README.md
url = https://github.com/manjumaigur/django-smart-models
author = Manjunath Maigur
author_email = manjumbmb97@gmail.com
license = GPL-3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.1
    openai
    stability-sdk
    loguru
    black
    isort